Bug 126506 - Tab label too low within macro editor
Summary: Tab label too low within macro editor
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:6.5.0
Keywords:
Depends on:
Blocks: BASIC-IDE
  Show dependency treegraph
 
Reported: 2019-07-22 11:06 UTC by Thorsten Wagner
Modified: 2020-01-01 20:54 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Screenshot 1 (15.30 KB, image/png)
2019-07-22 11:07 UTC, Thorsten Wagner
Details
Screenshot 2 (12.25 KB, image/png)
2019-07-22 11:07 UTC, Thorsten Wagner
Details
Comparison between Calc tabs and macro editor tabs (27.98 KB, image/png)
2019-07-23 09:41 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thorsten Wagner 2019-07-22 11:06:41 UTC
Description:
Tab labels have been redesigned and are higher now. Tab label within macro editor has same height as before (see screenshot 1) and is now lower than the other tab labels (see screenshot 2, e. g. Calc).

Steps to Reproduce:
1. Open macro editor and look at tab labels at bottom of window
2. Open Calc and look at tab labes at bottom of window

Actual Results:
Tab labes within macro editor are rendered lower than tab labels within other applications.

Expected Results:
Tab labels within macro editor are rendered with same height than tab labels within other applications.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
Comment 1 Thorsten Wagner 2019-07-22 11:07:01 UTC
Created attachment 152936 [details]
Screenshot 1
Comment 2 Thorsten Wagner 2019-07-22 11:07:19 UTC
Created attachment 152937 [details]
Screenshot 2
Comment 3 Roman Kuznetsov 2019-07-23 09:40:48 UTC
Confirm in

Version: 6.4.0.0.alpha0+ (x86)
Build ID: c738be4de6886a0c96b7d10df7e78c8b2964c135
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded
Comment 4 Roman Kuznetsov 2019-07-23 09:41:33 UTC
Created attachment 152956 [details]
Comparison between Calc tabs and macro editor tabs
Comment 5 Commit Notification 2020-01-01 18:22:44 UTC
U-DESKTOP-8OSNV7R\DrRobotto committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/83955c30405b086fb9b753f2734827c63e951c91

tdf#126506 - Adjusted height margin of the tab bar

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.