tdf#126506 - Adjusted height margin of the tab bar

Adjusted the height margin of the tab bar in the Basic IDE in order
to reflect the new look of the TabBar from tdf#124572.

Change-Id: I4fadec983405b05c7330f762f4ed2e12d3a40d27