basctl/source/basicide/basides1.cxx
@@ -56,6 +56,8 @@
 #include <vcl/svapp.hxx>
 #include <vcl/weld.hxx>
 
+constexpr sal_Int32 TAB_HEIGHT_MARGIN = 10;
+
 namespace basctl
 {
 
@@ -1329,7 +1331,7 @@ void Shell::AdjustPosSizePixel( const Point &rPos, const Size &rSize )
         return;
 
     Size aTabBarSize;
-    aTabBarSize.setHeight( GetViewFrame()->GetWindow().GetFont().GetFontHeight() + 4 );
+    aTabBarSize.setHeight( GetViewFrame()->GetWindow().GetFont().GetFontHeight() + TAB_HEIGHT_MARGIN );
     aTabBarSize.setWidth( rSize.Width() );
 
     Size aSz( rSize );
